<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/view_editor_card_corner_radius"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/bg_bottom_border_light_grey">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="This is name"/>

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_phone_number"/>

        <TextView
            android:id="@+id/tvLineId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_info_line_id"/>

        <TextView
            android:id="@+id/tvLineUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_info_line_url"/>

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="This is Address"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>